# actix-graphql-rs

./: Cargo.toml  README.md  app.schema.gql
src/: config.rs  error.rs  handlers.rs  main.rs
src/db/: categories.rs  mod.rs  model_macros.rs  repo.rs  todos.rs  users.rs
src/models/: categories.rs  common.rs  mod.rs  todos.rs  users.rs
src/schema/: categories.rs  mod.rs  todos.rs
src/schema/categories/: gql.rs  mod.rs  resolvers.rs
src/schema/mutations/: categories.rs  mod.rs  todos.rs  users.rs
src/schema/queries/: categories.rs  mod.rs  todos.rs  users.rs
src/schema/subscriptions/: mod.rs  todos.rs
src/schema/todos/: gql.rs  mod.rs  resolvers.rs
src/schema/user/: gql.rs  mod.rs  resolvers.rs
src/schema/users/: gql.rs  mod.rs  resolvers.rs
src/utils/: otp.rs  password.rs
