[package]
name = "actix-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
async-graphql = "6"
async-graphql-actix-web = "6"
env_logger = "0.11"
log = "0.4"
redis = { version = "0.32.0", features = ["connection-manager", "tokio-comp"] }
mongodb = { version = "3.2.3", features = ["rustls-tls"] }
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
bson = "2.15.0"
async-trait = "0.1"
dotenvy = "0.15"
