[package]
name = "actix-playground"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
async-graphql = "7"
async-graphql-axum = "7"
mongodb = { version = "3.2", features = ["rustls-tls"] }
redis = { version = "0.32", features = ["connection-manager", "tokio-comp"] }
dotenvy = "0.15"
bson = "2"
futures = "0.3"
async-trait = "0.1"
thiserror = "1"
